added semantic HTML markers

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Personal Website</title>
   </head>
   <body>
-    <div class= "nav">
-  		<ul>
-  			<li><a href="index.html">Home</a></li>
-  			<li><a href="WhereImHeaded.html">Where I'm headed</a></li>
-  		</ul>
-    </div>
+    <head>
+      <nav>
+    		<ul>
+    			<li><a href="index.html">Home</a></li>
+    			<li><a href="WhereImHeaded.html">Where I'm headed</a></li>
+    		</ul>
+      </nav>
+    </head>
     <div class= "jumbotron">
     	<div id="big-square-border"></div>
       <div id="verticle-rectangle-1"></div>
@@ -20,6 +22,7 @@
       <div id="verticle-rectangle-2"></div>
     	<h1>make<br>impact</h1>
     </div>
+    <article>
     	<div id="personal-statement">
     		<h2>About Me</h2>
         <p>After working jobs pushing information around on the daily, I finnally woke up and
@@ -28,6 +31,7 @@
            Made in Seattle, the rain keeps me here.
           </p>
     	</div>
+    </article>
       <script  type="text/javascript" src="personalSite.js"></script>
   </body>
 </html>
