--- a/WhereImHeaded.html
+++ b/WhereImHeaded.html
@@ -6,12 +6,12 @@
     <title></title>
   </head>
   <body>
-    <div class= "nav">
+    <nav>
   		<ul>
   			<li><a href='index.html'>Home</a></li>
   			<li><a href='WhereImHeaded.html'>Where I'm headed</a></li>
   		</ul>
-    </div>
+    </nav>
     <div class= "jumbotron">
     	<div id="big-square-border"></div>
       <div id="verticle-rectangle-1"></div>
